# CapiLearn

./: .env.example  .gitignore  .pre-commit-config.yaml  CREDITS.md  README.md  alembic.ini  compose.yaml  pyproject.toml
backend/: README.md  __init__.py  main.py  pyproject.toml
backend/activity/: __init__.py  dates.py  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/admin/: __init__.py  dependencies.py  health_service.py  repository.py  router.py  schemas.py  service.py
backend/auth/: __init__.py  clerk_sign_in_tokens.py  clerk_webhook_service.py  dependencies.py  models.py  profile_projection.py  repository.py  router.py  schemas.py  service.py
backend/chat/: __init__.py  dependencies.py  events.py  models.py  repository.py  router.py  schemas.py  service.py
backend/core/: beta_auth.py  citations.py  config.py  database.py  date_ranges.py  exceptions.py  rate_limiting.py
backend/core/observability/: __init__.py  context.py  logging.py  middleware.py  timing.py  tracing.py
backend/docs/: index.md
backend/docs/rag/: architecture.md  engineering-notes.md  metrics.md  runbook.md
backend/ingestion/: fetch_corpus.py  ingest_pgvector.py  ingest_repo.py
backend/instructor/: __init__.py  dependencies.py  repository.py  router.py  schemas.py  service.py
backend/llm/: __init__.py  config.py  costing.py  events.py  graph.py  guardrail_factory.py  guardrails.py  litellm_guardrails.py  orchestration.py  prompts.py  provider.py  results.py  retrieval.py  schemas.py  service.py
backend/rag/: __init__.py  build_chroma_vector_store.py  build_vector_store.py  chunk_documents.py  chunk_identity.py  chunking.py  citations.py  config.py  deduplication.py  defaults.py  embeddings.py  evaluate_retrieval.py  models.py  provider.py  query.py  repository.py  retrieval.py  retriever.py  schemas.py  service.py  trace_contracts.py  tracing.py
backend/seeds/: dummy_user_data.json  dummy_user_data.py
backend/tests/: fakes.py  test_chat_api.py  test_chat_schemas.py  test_chat_service.py  test_fakes.py  test_llm_service.py
backend/tests/activity/: test_activity_api.py  test_activity_service.py
backend/tests/admin/: __init__.py  test_admin_api.py  test_admin_health_service.py  test_admin_repository.py  test_admin_service.py
backend/tests/auth/: test_demo_admin_sign_in_token_api.py  test_dependencies.py  test_me_api.py  test_model_integrity.py  test_profile_projection.py  test_profile_projection_migration.py  test_repository.py  test_service.py
backend/tests/chat/: service_helpers.py  test_chat_api.py  test_chat_schemas.py  test_chat_service.py  test_chat_service_citations.py  test_dependencies.py  test_model_integrity.py  test_repository.py  test_request_logging.py
backend/tests/core/: test_api_docs.py  test_beta_auth.py  test_config.py  test_date_ranges.py  test_observability.py
backend/tests/ingestion/: test_fetch_corpus.py  test_ingest_pgvector.py
backend/tests/instructor/: test_instructor_api.py  test_instructor_repository.py  test_instructor_service.py
backend/tests/llm/: helpers.py  test_guardrail_settings.py  (+9 more)
backend/usage/: __init__.py  repository.py
backend/webhooks/: __init__.py  router.py
(+118 files in other folders)
