[project]
name = "capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "chromadb>=0.6.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "sentence-transformers>=3.0.0",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  # pycodestyle, pyflakes, isort, pyupgrade
