[project]
name = "capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "clerk-backend-api>=5.0.7",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "litellm>=1.83.14,!=1.82.7,!=1.82.8",
    "markdown-it-py>=4.2.0",
    "pgvector>=0.4.2",
    "pydantic>=2.12.5,<2.13",
    "pydantic-settings>=2.14.1",
    "slowapi>=0.1.10",
    "sqlalchemy>=2.0.49",
    "svix>=1.95.2",
    "tzdata>=2026.2",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.fastapi]
entrypoint = "backend.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  # pycodestyle, pyflakes, isort, pyupgrade
